--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -3,87 +3,80 @@
   <form id='productForm'>
     <div class='mb-1 row'>
       <label for='title' class='col-sm-2 col-form-label'>Título</label>
-
       <div class='col-sm-10'>
-        <input type='text' name='title' id='title' class='form-control' />
+        <input
+          type='text'
+          name='title'
+          id='title'
+          class='form-control'
+          required
+        />
       </div>
     </div>
-
     <div class='mb-1 row'>
       <label
         for='description'
         class='col-sm-2 col-form-label'
-
       >Descripción</label>
       <div class='col-sm-10'>
-        <input type='text' name='description' class='form-control' />
+        <input type='text' name='description' class='form-control' required />
       </div>
     </div>
 
     <div class='mb-1 row'>
       <label for='code' class='col-sm-2 col-form-label'>Código</label>
       <div class='col-sm-10'>
-
-        <input type='text' name='code' class='form-control' />
+        <input type='text' name='code' class='form-control' required />
       </div>
     </div>
 
     <div class='mb-1 row'>
       <label for='price' class='col-sm-2 col-form-label'>Precio</label>
       <div class='col-sm-10'>
-
-        <input type='text' name='price' class='form-control' />
+        <input
+          name='price'
+          class='form-control'
+          type='number'
+          required
+        />
       </div>
     </div>
-
     <div class='mb-1 row'>
       <label for='status' class='col-sm-2 col-form-label'>Estado</label>
       <div class='col-sm-10'>
-
-        <input type='text' name='status' class='form-control' />
+        <input type='checkbox' name='status' id='status' class='form-check-input' />
       </div>
     </div>
-
     <div class='mb-1 row'>
       <label for='stock' class='col-sm-2 col-form-label'>Stock</label>
       <div class='col-sm-10'>
-
-        <input type='text' name='stock' class='form-control' />
+        <input type='number' name='stock' class='form-control' required />
       </div>
     </div>
-
     <div class='mb-1 row'>
       <label for='category' class='col-sm-2 col-form-label'>Categoría</label>
       <div class='col-sm-10'>
-
-        <input type='text' name='category' class='form-control' />
+        <input type='text' name='category' class='form-control' required />
       </div>
     </div>
-
     <div class='mb-1 row'>
       <label for='thumbnail' class='col-sm-2 col-form-label'>Thumbnail</label>
       <div class='col-sm-10'>
-
         <input type='text' name='thumbnail' class='form-control' />
       </div>
     </div>
-
     <div class='mb-1 row'>
       <div class='col-sm-10'>
         <button type='submit' class='btn btn-primary'>Agregar producto</button>
-
       </div>
-      </div>
-
+    </div>
   </form>
-
 </div>
 
 <div>
   <h4 class='text-center'>Lista de productos</h4>
   <div id='products' class='row'>
     <table class='table'>
-
 
       <thead class='table-dark'>
         <tr class='table-dark'>
@@ -99,12 +92,13 @@
           <th>Acciones</th>
         </tr>
       </thead>
-      <tbody id='listProducts'>        
+      <tbody id='listProducts'>
       </tbody>
     </table>
   </div>
 
 </div>
 
-<script src="/socket.io/socket.io.js"></script>
-<script src="/js/realTimeProducts.js"></script>
+<script src='https://cdn.jsdelivr.net/npm/sweetalert2@11'></script>
+<script src='/socket.io/socket.io.js'></script>
+<script src='/js/realTimeProducts.js'></script>
