:hammer: Correccion en routes

--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -47,7 +47,7 @@
   </table>
   <div class='d-flex justify-content-center'>
     {{#if result.hasPrevPage}}
-      <a href={{result.prevLink}}><button class='btn btn-primary'></button></a>
+      <a href={{result.prevLink}}><button class='btn btn-primary'><<</button></a>
     {{/if}}
     &nbsp;
     <a href={{result.pageLink}}><button
